--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <title>OneShot</title>
 </head>
 
-<body style="height: 5000px;">
+<body>
   <div id="app"></div>
   <script type="module" src="/src/main.js"></script>
 </body>
